# developer-relations

./: .gitignore  ISSUE_TEMPLATE.md  Quality.xml  README.md
sample_apps/rso_sample_apps/python/: README.md  main.py  pyproject.toml
sample_apps/rso_sample_apps/rust/: Cargo.toml  Makefile  README.md  grcov.yml  rust-toolchain.toml
sample_apps/rso_sample_apps/rust/config/: config.yml  example-config.yml
sample_apps/rso_sample_apps/rust/docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/config/: fn.parse.html  index.html  sidebar-items.js  struct.Api.html  struct.Configuration.html  struct.Rso.html  struct.Server.html  struct.Tls.html  struct.Urls.html
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/handlers/: index.html  sidebar-items.js  struct.HtmlTemplate.html
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/handlers/data/: fn.account_data.html  fn.champion_rotation_data.html  fn.handle.html  index.html  sidebar-items.js  struct.AccountData.html  struct.ChampionRotationData.html  struct.Request.html  struct.Response.html
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/handlers/default/: fn.handle.html  index.html  sidebar-items.js  struct.Response.html
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/handlers/oauth/: fn.handle.html  index.html  sidebar-items.js  struct.Request.html  struct.Response.html
sample_apps/rso_sample_apps/rust/docs/riot_rso_sample_app/service/: fn.create_app.html  fn.listen.html  index.html  sidebar-items.js
sample_apps/rso_sample_apps/rust/docs/src/riot_rso_sample_app/: config.rs.html  main.rs.html  service.rs.html
sample_apps/rso_sample_apps/rust/docs/src/riot_rso_sample_app/handlers/: data.rs.html  default.rs.html  mod.rs.html  oauth.rs.html
sample_apps/rso_sample_apps/rust/docs/trait.impl/askama/: trait.Template.js
sample_apps/rso_sample_apps/rust/docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
sample_apps/rso_sample_apps/rust/docs/trait.impl/core/clone/: trait.Clone.js
sample_apps/rso_sample_apps/rust/docs/trait.impl/core/cmp/: trait.PartialEq.js
sample_apps/rso_sample_apps/rust/docs/trait.impl/core/convert/: trait.From.js
sample_apps/rso_sample_apps/rust/mock/: .gitignore  Cargo.toml
sample_apps/rso_sample_apps/rust/mock/src/: lib.rs
sample_apps/rso_sample_apps/rust/src/: config.rs  main.rs  service.rs
sample_apps/rso_sample_apps/rust/src/handlers/: data.rs  default.rs  mod.rs  oauth.rs
sample_apps/rso_sample_apps/rust/templates/: data.html  default.html  oauth.html
(+27 files in other folders)
