[package]
name = "riot_rso_sample_app"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-warp"] }
askama_warp = "0.13.0"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
ureq = { version = "2.9.6", features = ["json"] }

warp = { version = "0.3.7", features = ["tls"] }
tempfile = "3.10.1"
mockito = "1.4.0"
httpmock = "0.7.0"
