[package]
name = "riot_rso_sample_app"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mock = { path = "mock" }

[dependencies]
askama = { version = "0.12.1", features = ["with-warp"] }
askama_warp = "0.13.0"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
ureq = { version = "2.9.7", features = ["json"] }
warp = { version = "0.3.7", features = ["tls"] }
url = "2.5.0"
config = "0.14.0"
axum = {  version = "0.7.5"  }
axum-server  = { version = "0.6.0", features = ["tls-rustls"] }
tower = "0.4.13"
http-body-util = "0.1.1"
