[package]
name = "riot_rso_sample_app"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mock = { path = "mock" }

[dependencies]
askama = { version = "0.12.1"}
axum = { version = "0.7.5" }
axum-server  = { version = "0.6.0", features = ["tls-rustls"] }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.3"
http-body-util = "0.1.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.0"
